
    - The Romanian message catalog has been updated.  (LP: #1415489)

    - The Russian templates have been updated by Danil Smirnov.  (LP: #1403462)

    - The Japanese translation has been updated by SATOH Fumiyasu.
      (LP: #1402989)

    - A minor change in the French translation of a listinfo subscribe form
      message has been made.  (LP: #1331194)

  Bug fixes and other patches

    - The admindb interface has been fixed so the the detail message body
      display doesn't lose part of a multi-byte character, and characters which
      are invalid in the message's charset are replaced rather than the whole
      body not being converted to the display charset.  (LP: #1415406)

    - Fixed a bug in bin/rmlist that would throw an exception or just fail to
      remove held message files for a list with regexp special characters in
      its name.  (LP:#1414864)

    - When applying DMARC mitigations, CookHeaders now adds the original From:
      to Cc: rather than Reply-To: in some cases to make MUA 'reply' and
      'reply all' more consistent with the non-DMARC cases.  (LP: #1407098)

    - The Subject: of the list welcome message wasn't always in the user's
      preferred language.  Fixed.  (LP: #1400988)

    - Accept email command in Subject: prefixed with Re: or similar with no
      intervening space.  (LP: #1400200)

    - Fixed a UnicodeDecodeError that could occur in the web admin interface
      if 'text' valued attributes have unicode values.  (LP: #1397170)

    - We now catch the NotAMemberError exception thrown if an authenticated
      unsubscribe is submitted from the user options page for a nonmember.
      (LP: #1390653)

    - Fixed an archiving bug that would cause messages with 'Subject: Re:'
      only to be indexed in the archives without a link to the message.
      (LP: #1388614)

    - The vette log entry for a message discarded by a handler now includes
      the list name and the name of the handler.  (LP: #558096)
